--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,2 +1,5 @@
+<% title @post.title %>
+
 <h1><%= @post.title %></h1>
-<p><%= @post.description %></p>
+<p><%= @post.description %></p><br>
+<p><%= last_updated(@post) %></p>
